--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "antd": "^4.20.2",
+    "firebase": "^9.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
