--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@mui/icons-material": "^5.6.2",
     "antd": "^4.20.2",
     "firebase": "^9.8.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3",
+    "path": "^0.12.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-grid-layout": "^1.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
